# m

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
src-tauri/: Cargo.toml  Info.plist  clippy.toml  entitlements.plist  tauri.conf.json
src-tauri/benches/: transcription_bench.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V001__initial_schema.sql  V002__fts5_search.sql  V003__ai_templates.sql  V004__integrations.sql  V005__export_presets.sql  V006__whisper_jobs.sql  V007__acceleration_stats.sql  V008__smart_folders.sql  V009__segments_fts_population.sql  V010__recordings.sql  V011__recordings_system_audio_path.sql  V012__dictation_history.sql  V013__batch_jobs.sql  V014__batch_job_timestamps.sql  V015__batch_jobs_model.sql  V016__api_keys_stub.sql
src-tauri/src/: error.rs  keychain.rs  lib.rs  logging.rs  main.rs  settings.rs
src-tauri/src/ai/: actions.rs  cost.rs  mod.rs  provider.rs  templates.rs
src-tauri/src/audio/: combined.rs  decode.rs  mic.rs  mod.rs  recording.rs  system_audio.rs
src-tauri/src/batch/: export.rs  mod.rs  queue.rs
src-tauri/src/cloud_transcription/: deepgram.rs  elevenlabs.rs  groq_whisper.rs  mod.rs  openai_whisper.rs  vibevoice.rs
src-tauri/src/commands/: ai.rs  batch.rs  captions.rs  cloud_transcription.rs  diarization.rs  dictation.rs  export.rs  import.rs  integrations.rs  keychain.rs  library.rs  mod.rs  recording.rs  settings.rs  shortcuts.rs  transcription.rs  translate.rs  update.rs  watch.rs
src-tauri/src/database/: migrations.rs  mod.rs  recordings.rs  search.rs  segments.rs  smart_folders.rs  transcripts.rs  undo.rs
src-tauri/src/diarization/: deepgram.rs  elevenlabs.rs  mod.rs  tinydiarize.rs
src-tauri/src/dictation/: accessibility.rs  ai_correct.rs  history.rs  mod.rs  postprocess.rs
src-tauri/src/export/: csv.rs  docx.rs  html.rs  json.rs  markdown.rs  mod.rs  pdf.rs  share.rs  srt.rs  template.rs  text.rs  vtt.rs  whisper_archive.rs
src-tauri/src/import/: youtube.rs  ytdlp.rs
src-tauri/src/integrations/: deepl.rs  mod.rs  notion.rs  obsidian.rs  webhook.rs
src-tauri/src/models/: manager.rs  registry.rs
src-tauri/src/network/: guard.rs
src-tauri/src/shortcuts/: intents.rs  mod.rs
(+114 files in other folders)
