[package]
name = "whisper-desk-app"
version = "1.0.0"
description = "WhisperDesk - Local-first transcription app"
authors = []
edition = "2021"
rust-version = "1.77"

[lib]
name = "whisper_desk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "whisper-desk-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-updater = "2.2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"
tauri-plugin-shell = "2.2"
tauri-plugin-notification = "2.2"
tauri-plugin-clipboard-manager = "2.2"
tauri-plugin-process = "2.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }

# Async / networking
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system
notify = "7.0"
tempfile = "3.14"
zip = "2.2"

# Export
printpdf = "0.7"
handlebars = "6.2"

# Utility
uuid = { version = "1.11", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
dirs = "5.0"
sha2 = "0.10"
ed25519-dalek = "2.1"

# Audio decode
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "pcm", "isomp4"] }

# Audio capture (microphone + system)
cpal = "0.15"
hound = "3.5"

# Resampling
rubato = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.0"
core-foundation = "0.10"
# Whisper inference (requires Metal + libclang — macOS only)
whisper-rs = { version = "0.16.0", features = ["metal"] }

[[bench]]
name = "transcription_bench"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
